k8s/polybot/polybot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: team3polybot
  namespace: team3ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: team3polybot
  template:
    metadata:
      labels:
        app: team3polybot
    spec:
      containers:
        - name: team3polybot
          image: kinanhino/polybot:1.0.2-amd64
          ports:
            - containerPort: 8443
          livenessProbe:
            httpGet:
              path: /health
              port: 8443
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8443
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: team3polybot-service
  labels:
    app: team3polybot
spec:
  selector:
    app: team3polybot
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: team3polybot-ingress
  namespace: team3ns
spec:
  ingressClassName: nginx
  rules:
    - host: bot.atech-bot.click
      http:
        paths:
          - path: /team3polybot
            pathType: Prefix
            backend:
              service:
                name: team3polybot-service
                port:
                  number: 8443
  tls:
    - hosts:
        - bot.atech-bot.click
      secretName: tls-team3-secret
